--- a/display.html
+++ b/display.html
@@ -17,6 +17,7 @@
 <body>
     <h1>Flowers</h1>
     <p>These are some pictures of flowers</p>
+    <img src="" alt="">
     <img src="https://imgs.search.brave.com/ew6_LdqGct9UmDZD4xR0DVbB9TPnZif7zrfp-Q2ivlI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90aHVt/YnMuZHJlYW1zdGlt/ZS5jb20vYi9hdXR1/bW4tZmxvd2Vycy0y/MjEyMjU5NC5qcGc" alt="sunflower">
     <img class="none" src="https://imgs.search.brave.com/Dl_3lx_PHlHN-Ak-7DXbUSkWZLgT5PqTDMrfbGm6UKs/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9yZW5k/ZXIuZmluZWFydGFt/ZXJpY2EuY29tL2lt/YWdlcy9pbWFnZXMt/cHJvZmlsZS1mbG93/LzQwMC9pbWFnZXMv/YXJ0d29ya2ltYWdl/cy9tZWRpdW1sYXJn/ZS8yLzExLWEtY2xv/c2UtdXAtb2YtYS1i/b3VxdWV0LW9mLWZs/b3dlcnMtbmljaG9s/YXMtZXZlbGVpZ2gu/anBn" alt="roses">
     <img src="https://imgs.search.brave.com/XaBhCkdGse9aJ3_bSuVxBQAdq5wIjVwARWgWNZ53jTQ/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9yZW5k/ZXIuZmluZWFydGFt/ZXJpY2EuY29tL2lt/YWdlcy9pbWFnZXMt/cHJvZmlsZS1mbG93/LzQwMC9pbWFnZXMv/YXJ0d29ya2ltYWdl/cy9tZWRpdW1sYXJn/ZS8yLzEyLWEtY2xv/c2UtdXAtb2YtYS1i/b3VxdWV0LW9mLWZs/b3dlcnMtbmljaG9s/YXMtZXZlbGVpZ2gu/anBn" alt="daisies">
